<resources>
    <string name="app_name">NasaPic</string>
    <string name="search_wiki">Поиск в Wikipedia</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="home">Домой</string>
    <string name="settings">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="changeTheme">Тема</string>
    <string name="ThemeStr1">Тема 1</string>
    <string name="ThemeStr2">Тема 2</string>
    <string name="earth">Земля</string>
    <string name="lonTextHint">Долгота</string>
    <string name="latTextHint">Широта</string>
    <string name="dateTextHint">Дата</string>
    <string name="dimTextHint">Масштаб</string>
    <string name="earthImageButton">Получить</string>
    <string name="notes">Дела</string>
</resources>